--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@ button.upi:hover {
 
 //https://docs.google.com/spreadsheets/d/e/2PACX-1vQMSEcU-tTxPl7OjfCaVfnRmBByt-LjHMq8EbFxUwYPB3nqI7QnPSib-GJ_pa8WiJw05hT9aomVebd0/pub?output=xlsx
 
-const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQMSEcU-tTxPl7OjfCaVfnRmBByt-LjHMq8EbFxUwYPB3nqI7QnPSib-GJ_pa8WiJw05hT9aomVebd0/pub?output=xlsx&sheet=Sheet1';
+//const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQMSEcU-tTxPl7OjfCaVfnRmBByt-LjHMq8EbFxUwYPB3nqI7QnPSib-GJ_pa8WiJw05hT9aomVebd0/pub?output=xlsx&sheet=Sheet1';
+const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQMSEcU-tTxPl7OjfCaVfnRmBByt-LjHMq8EbFxUwYPB3nqI7QnPSib-GJ_pa8WiJw05hT9aomVebd0/pub?output=csv&sheet=Catalog_Web_Dyna%20-%20Sheet1';
+
 let allProducts = [];
 
 // ---------------- FETCH ----------------
