--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ header {
 /* ----------------- PRODUCT GRID ----------------- */
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(230px,1fr));
+  grid-template-columns: repeat(auto-fit,minmax(800px,1fr));
   gap: 25px;
   padding: 20px;
 }
@@ -89,7 +89,7 @@ header {
 
 .card img {
   width: 100%;
-  height: 260px;
+  height: 800px;
   border-radius: 16px;
   object-fit: cover;
   transition: transform 0.4s;
@@ -165,7 +165,7 @@ button.upi:hover {
 
 .popup-content {
   width: 90%;
-  max-width: 450px;
+  max-width: 900px;
   background: white;
   border-radius: 16px;
   padding: 15px;
@@ -180,7 +180,7 @@ button.upi:hover {
 .popup-img {
   width: 100%;
   border-radius: 14px;
-  height: 300px;
+  height: 700px;
   object-fit: cover;
 }
 
@@ -219,24 +219,13 @@ button.upi:hover {
     <h2 id="popName"></h2>
     <p id="popDesc"></p>
     <p class="price" id="popPrice"></p>
-    <button id="popWA">WhatsApp</button>
-    <button class="upi" id="popUPI">UPI Pay</button>
+    <button id="popWA">Order Now!</button>
+    <button class="upi" id="popUPI">Make Payment</button>
   </div>
 </div>
 
 <script>
 // ---------------- CONFIG ----------------
-//const SHEET_ID = "2PACX-1vQMSEcU-tTxPl7OjfCaVfnRmBByt-LjHMq8EbFxUwYPB3nqI7QnPSib-GJ_pa8WiJw05hT9aomVebd0";
-//const SHEET_NAME = "Catalog_Web_Dyna - Sheet1";
-
-//const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQMSEcU-tTxPl7OjfCaVfnRmBByt-LjHMq8EbFxUwYPB3nqI7QnPSib-GJ_pa8WiJw05hT9aomVebd0/pub?output=csv';
-//https://docs.google.com/spreadsheets/d/e/2PACX-1vQMSEcU-tTxPl7OjfCaVfnRmBByt-LjHMq8EbFxUwYPB3nqI7QnPSib-GJ_pa8WiJw05hT9aomVebd0/pub?output=csv
-//&sheet=${SHEET_NAME}';
-//const url = 'https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:csv&sheet=${SHEET_NAME}`;
-
-//https://docs.google.com/spreadsheets/d/e/2PACX-1vQMSEcU-tTxPl7OjfCaVfnRmBByt-LjHMq8EbFxUwYPB3nqI7QnPSib-GJ_pa8WiJw05hT9aomVebd0/pub?output=xlsx
-
-//const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQMSEcU-tTxPl7OjfCaVfnRmBByt-LjHMq8EbFxUwYPB3nqI7QnPSib-GJ_pa8WiJw05hT9aomVebd0/pub?output=xlsx&sheet=Sheet1';
 const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQMSEcU-tTxPl7OjfCaVfnRmBByt-LjHMq8EbFxUwYPB3nqI7QnPSib-GJ_pa8WiJw05hT9aomVebd0/pub?output=csv&sheet=Catalog_Web_Dyna%20-%20Sheet1';
 
 let allProducts = [];
