--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="topbar">
     <div class="brand">
-      <a href="index.html"><img src="logo.svg" alt="Brand" class="logo"> <span>My Static Shop</span></a>
+      <a href="index.html"><img src="logo.png" alt="Brand" class="logo"></a>
     </div>
     <div class="actions">
       <input id="search" placeholder="Search products..." aria-label="Search products" />
