--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Static Shop</title>
+  <title>SparklingSaisha - Jewelry Store</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
@@ -21,20 +21,28 @@
     </div>
   </header>
 
-  <main>
-    <section class="hero">
-      <h1 id="site-title">Featured Products</h1>
-      <p class="subtitle">Shop professional, mobile-first product pages.</p>
-    </section>
+  <!-- Main home content -->
+  <div id="main-content">
+    <main>
+      <section class="hero">
+        <h1 id="site-title">Featured Products</h1>
+        <p class="subtitle">Premium jewelry collection for every occasion</p>
+      </section>
 
-    <section id="gallery" class="grid" aria-live="polite"></section>
+      <section id="gallery" class="grid" aria-live="polite" aria-label="Products gallery"></section>
 
-    <nav class="pagination">
-      <button id="prev-page">Prev</button>
-      <span id="page-info">Page 1</span>
-      <button id="next-page">Next</button>
-    </nav>
-  </main>
+      <nav class="pagination">
+        <button id="prev-page">Prev</button>
+        <span id="page-info">Page 1</span>
+        <button id="next-page">Next</button>
+      </nav>
+    </main>
+  </div>
+
+  <!-- Orders page -->
+  <div id="orders-page" style="display:none;min-height:100vh;background:var(--bg)">
+    <div id="orders-page-content"></div>
+  </div>
 
   <!-- Image modal -->
   <div id="modal" class="modal hidden" role="dialog" aria-hidden="true">
@@ -54,6 +62,7 @@
     <div id="cart-items"></div>
     <div class="cart-footer">
       <strong>Total: <span id="cart-total">₹0</span></strong>
+      <a href="https://wa.me/7448192773?text=I have a query before I place an order." class="chat-btn" target="_blank" style="text-align:center;width:100%">💬 Chat with us</a>
       <button id="checkout">Checkout</button>
     </div>
   </div>
@@ -72,6 +81,7 @@
     <div id="account-area"></div>
   </div>
 
+  <script src="auth.js"></script>
   <script src="cart.js"></script>
   <script src="app.js"></script>
 </body>
