Marquee, Orders.json, npm, server setup

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 <body>
+  <!-- Marquee Banner -->
+  <div class="marquee-container">
+    <div class="marquee-content" id="marquee-content"></div>
+  </div>
+
   <header class="topbar">
     <div class="brand">
       <a href="index.html"><img src="logo.png" alt="Brand" class="logo"></a>
